syntax="proto3";

package leopard.protobuf;
import "leopard.proto";

option java_package = "org.leopard.remote.proto.notify";
option java_outer_classname = "NotifyProto";
option java_multiple_files = true;

message PartitionChangedSignal {
  string topic = 1;
}

message NodeOfflineSignal {
  string nodeId = 1;
  string host = 2;
  int32 port = 3;
}

message MessagePullSignal {
  string topic = 1;
  string queue = 2;
  int32 ledger = 3;
  int32 limit = 4;
  int32 epoch = 5;
  int64 index = 6;
}

message MessagePushSignal {
  string queue = 1;
  int32 epoch = 2;
  int64 index = 3;
  string topic = 4;
  int32 ledgerId = 5;
}